And again, get the quoting right.

--- a/unbound/templates/service.yaml
+++ b/unbound/templates/service.yaml
@@ -1,15 +1,15 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: {{ template "fullname" . | quote }}
+  name: {{ template "fullname" . }}
   labels:
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    app: {{ template "fullname" . | quote }}
-    heritage: {{ .Release.Service | quote }}
-    release: {{ .Release.Name | quote }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    app: {{ template "fullname" . }}
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
 spec:
   selector:
-    app: {{ template "fullname" . | quote}}
+    app: {{ template "fullname" . }}
   ports:
     - name: dns
       protocol: UDP
