--- a/unbound/values.yaml
+++ b/unbound/values.yaml
@@ -7,10 +7,17 @@ bindTo: "0.0.0.0"
 clusterIpv4Cidr: "10.0.0.0/14"
 forwardZones:
 - name: "fake.net"
-  hosts:
+  forwardSsl: "yes"
+  forwardHosts:
   - "fake1.host.net"
   - "fake2.host.net"
+  forwardIps:
+  - "10.10.10.10"
+  - "10.11.10.10"
 - name: "stillfake.net"
-  hosts:
+  forwardHosts:
   - "stillfake1.host.net"
   - "stillfake2.host.net"
+  forwardIps:
+  - "10.10.10.10"
+  - "10.11.10.10"
