Support setting the number of threads.

--- a/unbound/templates/configmap.yaml
+++ b/unbound/templates/configmap.yaml
@@ -10,6 +10,7 @@ metadata:
 data:
   unbound.conf: |-
     server:
+        num-threads: {{ .Values.numThreads }}
         directory: "/etc/unbound"
         interface: {{ .Values.bindTo }}
         access-control: {{ .Values.clusterIpv4Cidr }} allow
