--- a/unbound/values.yaml
+++ b/unbound/values.yaml
@@ -4,6 +4,7 @@ memLimit: "64Mi"
 cpuRequest: "100m"
 verbosity: 1
 bindTo: "0.0.0.0"
+numThreads: 1
 clusterIpv4Cidr: "10.0.0.0/14"
 forwardZones:
 - name: "fake.net"
