Add a comment to the sample zones file.

--- a/kunbound/zones.yaml
+++ b/kunbound/zones.yaml
@@ -1,3 +1,6 @@
+# this is a sample helm values file showing the
+# structure for adding forwarding zones to the
+# unbound conf file.
 forwardZones:
 - name: "fake.net"
   forwardHosts:
