--- a/kunbound/values.yaml
+++ b/kunbound/values.yaml
@@ -3,6 +3,5 @@ memRequest: "32Mi"
 memLimit: "64Mi"
 cpuRequest: "100m"
 verbosity: 1
-bindTo: "0.0.0.0"
 numThreads: 1
-clusterIpv4Cidr: "10.0.0.0/14"
+clusterIpv4Cidr:
